package au.com.codeka.warworlds.common.proto;

import "au/com/codeka/warworlds/common/proto/common.proto";

message Design {
  enum DesignType {
    UNKNOWN_DESIGN = 0;
    COLONY_SHIP = 1;
    SCOUT = 2;
    FIGHTER = 3;
    TROOP_CARRIER = 4;
    WORMHOLE_GENERATOR = 5;

    SHIPYARD = 101;
    SILO = 102;
    RESEARCH = 103;
    GROUND_SHIELD = 104;
    BIOSPHERE = 105;
    HQ = 106;
    RADAR = 107;
    WORMHOLE_DISRUPTOR = 108;
  }
  optional DesignType type = 1;

  optional string display_name = 2;

  optional string description = 3;

  message BuildCost {
    optional int32 minerals = 1;
    optional int32 population = 2;
    optional int32 max_count = 3;
  }
  optional BuildCost build_cost = 4;

  optional string image_url = 5;

  enum DesignKind {
    UNKNOWN_KIND = 0;
    BUILDING = 1;
    SHIP = 2;
  }
  optional DesignKind design_kind = 6;

  message Dependency {
    optional DesignType type = 1;
    optional int32 level = 2;
  }
  repeated Dependency dependencies = 7;

  enum EffectType {
    UNKNOWN_EFFECT = 0;
    FIGHTER_SHIP = 1;
    SCOUT_SHIP = 2;
    EMPTY_SPACE_MOVER = 4;

    STORAGE = 101;
    DEFENCE = 102;
    POPULATION_BOOST = 103;
    RADAR_SCAN = 104;
    WORMHOLE_DISRUPT = 105;
    RADAR_ALERT = 106;
  }

  message Effect {
    optional EffectType type = 1;
    optional float range = 2;
    optional int32 goods = 3;
    optional int32 minerals = 4;
    optional int32 energy = 5;
    optional float bonus = 6;
    optional int32 minimum = 7;
  }
  repeated Effect effect = 8;

  optional int32 max_per_colony = 9;

  optional int32 max_per_empire = 10;

  optional bool show_in_solar_system = 11;

  enum UpgradeType {
    UNKNOWN_UPGRADE = 0;
    CLOAK = 1;
    BOOST = 2;
    CRYOGENICS = 3;
  }

  message Upgrade {
    optional UpgradeType type = 1;
    optional string display_name = 2;
    optional string description = 3;
    optional BuildCost build_cost = 4;
    optional string image_url = 5;
    repeated Dependency dependencies = 6;
    repeated Effect effects = 7;
  }
  repeated Upgrade upgrades = 12;

  optional float speed_px_per_hour = 13;

  optional float fuel_cost_per_px = 14;

  optional float base_attack = 15;

  optional float base_defence = 16;

  optional int32 combat_priority = 17;
}

message Designs {
  repeated Design designs = 1;
}